force-app/main/default/objects/PaperCommunication__c/PaperCommunication__c.object-meta.xml
<CustomObject>
    <label>Comunicazione Cartacea</label>
    <nameField>
        <label>Comunicazione Cartacea Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Comunicazioni Cartacee</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>