force-app/main/default/objects/PaperCommunication__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Relazione con l’oggetto Campagna</description>
    <label>Campagna</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Comunicazioni Cartacee</relationshipLabel>
    <relationshipName>Comunicazioni_Cartacee</relationshipName>
    <type>Lookup</type>
</CustomField>