force-app/main/default/objects/PaperCommunication__c/fields/CommunicationId__c.field-meta.xml
<CustomField>
    <fullName>CommunicationId__c</fullName>
    <description>External id</description>
    <label>Id Comunicazione</label>
    <length>40</length>
    <type>Text</type>
</CustomField>