force-app/main/default/objects/PaperCommunication__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Data gestita dal CRM</description>
    <label>Data</label>
    <type>Date</type>
</CustomField>