force-app/main/default/objects/PaperCommunication__c/fields/PdfUniqueId__c.field-meta.xml
<CustomField>
    <fullName>PdfUniqueId__c</fullName>
    <label>Id Univoco Pdf</label>
    <length>50</length>
    <type>Text</type>
</CustomField>