force-app/main/default/objects/PaperCommunication__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <description>può valere OK o KO</description>
    <label>Esito</label>
    <length>2</length>
    <type>Text</type>
</CustomField>